<resources>
    <string name="app_name">HansoBan</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_categoria">CategoriaActivity</string>

    <string name="ek_img_content">PSD Image</string>
    <string name="temple_asian_lounge_string">TEMPLE ASIAN LOUNGE</string>
    <string name="sushi_bar_string">SUSHI BAR</string>
    <string name="bar__string">BAR</string>
    <string name="postres__string">POSTRES</string>
    <string name="especialidad_string">ESPECIALIDADES</string>
    <string name="izakaya_string">IZAKAYA</string>
    <string name="appetizer_string">APPETIZERS</string>
    <string name="call_string">CALL</string>
    <string name="menu_string">MENU</string>
    <string name="piso_2_hotel_intercontinental_string">Piso 2 Hotel Intercontinental</string>
    <string name="santiago_de_chile_string">Santiago de Chile</string>
    <string name="av__vitacura_2885__las_condes__string">Av. Vitacura 2885, Las Condes</string>
    <string name="ek_img_content2">PSD Image</string>
    <string name="nombre_del_producto_string">Nombre del producto</string>
    <string name="descripcion_string">Lorem ipsum dolor sit amet, consectetur adipisicing elit, \rsed do eiusmod\r tempor incididunt ut labore \ret dolore magna aliqua. Ut </string>
    <string name="precio_string">$ 9.000</string>
    <string name="agregar_string">Agregar</string>
    <string name="entrada_caliente">ENTRADAS CALIENTES</string>
    <string name="entrada_fria">ENTRADAS FRÍAS</string>
    <string name="pescados_string">PESCADOS</string>
    <string name="vegetales_string">VEGETALES</string>
    <string name="sopas_string">SOPAS</string>
    <string name="carnes_string">CARNES</string>
    <string name="arroces_y_fideos_string">ARROCES Y FIDEOS</string>
    <string name="nigiri_sushi_string">NIGIRI SUSHI</string>
    <string name="sashimi_string">SASHIMI</string>
    <string name="onigiri_string">ONIGIRI</string>
    <string name="hosomaki_string">HOSOMAKI</string>
    <string name="sushi_fusion_string">SUSHI FUSION</string>
    <string name="aperitivos_string">APERITIVOS</string>
    <string name="cervezas_string">CERVEZAS</string>
    <string name="destilados_string">DESTILADOS</string>
    <string name="cocktel_string">COCKTEL</string>
    <string name="vinos_string">VINOS</string>
    <string name="jugos_string">JUGOS Y BEBIDAS \CAFETERIA</string>
    <string name="title_activity_popup">PopupActivity</string>
</resources>
